--- a/stmConn.ioc
+++ b/stmConn.ioc
@@ -36,7 +36,7 @@ Dma.USART6_TX.1.PeriphInc=DMA_PINC_DISABLE
 Dma.USART6_TX.1.Priority=DMA_PRIORITY_LOW
 Dma.USART6_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode
 ETH.IPParameters=MediaInterface,PhyAddress,PHY_RESET_DELAY,PHY_Name,MACAddr
-ETH.MACAddr=00\:80\:E1\:00\:00\:01
+ETH.MACAddr=02\:00\:00\:00\:01\:00
 ETH.MediaInterface=ETH_MEDIA_INTERFACE_RMII
 ETH.PHY_Name=LAN8742A_PHY_ADDRESS
 ETH.PHY_RESET_DELAY=0x00000FFF
@@ -70,15 +70,16 @@ FMC.SDClockPeriod2=FMC_SDRAM_CLOCK_PERIOD_2
 FMC.SelfRefreshTime1=4
 FMC.WriteRecoveryTime1=3
 FREERTOS.FootprintOK=true
-FREERTOS.IPParameters=Tasks01,configUSE_APPLICATION_TASK_TAG,configUSE_RECURSIVE_MUTEXES,configUSE_COUNTING_SEMAPHORES,configUSE_IDLE_HOOK,configUSE_MALLOC_FAILED_HOOK,configCHECK_FOR_STACK_OVERFLOW,configTOTAL_HEAP_SIZE,Queues01,FootprintOK
+FREERTOS.IPParameters=Tasks01,configUSE_APPLICATION_TASK_TAG,configUSE_RECURSIVE_MUTEXES,configUSE_COUNTING_SEMAPHORES,configUSE_IDLE_HOOK,configUSE_MALLOC_FAILED_HOOK,configCHECK_FOR_STACK_OVERFLOW,configTOTAL_HEAP_SIZE,Queues01,FootprintOK,configUSE_NEWLIB_REENTRANT
 FREERTOS.Queues01=tiva_msg,1024,tiva_msg_t,0,Dynamic,NULL,NULL
 FREERTOS.Tasks01=defaultTask,24,4096,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
 FREERTOS.configCHECK_FOR_STACK_OVERFLOW=2
-FREERTOS.configTOTAL_HEAP_SIZE=32768
+FREERTOS.configTOTAL_HEAP_SIZE=65536
 FREERTOS.configUSE_APPLICATION_TASK_TAG=1
 FREERTOS.configUSE_COUNTING_SEMAPHORES=1
 FREERTOS.configUSE_IDLE_HOOK=1
 FREERTOS.configUSE_MALLOC_FAILED_HOOK=1
+FREERTOS.configUSE_NEWLIB_REENTRANT=1
 FREERTOS.configUSE_RECURSIVE_MUTEXES=1
 File.Version=6
 I2C1.IPParameters=Timing
@@ -1178,7 +1179,7 @@ ProjectManager.DeviceId=STM32F746NGHx
 ProjectManager.FirmwarePackage=STM32Cube FW_F7 V1.16.0
 ProjectManager.FreePins=false
 ProjectManager.HalAssertFull=false
-ProjectManager.HeapSize=0x200
+ProjectManager.HeapSize=0x4000
 ProjectManager.KeepUserCode=true
 ProjectManager.LastFirmware=true
 ProjectManager.LibraryCopy=1
@@ -1188,11 +1189,11 @@ ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=stmConn.ioc
 ProjectManager.ProjectName=stmConn
-ProjectManager.StackSize=0x400
+ProjectManager.StackSize=0x8000
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_ADC3_Init-ADC3-false-HAL-true,5-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true,6-MX_CRC_Init-CRC-false-HAL-true,7-MX_DCMI_Init-DCMI-false-HAL-true,8-MX_DMA2D_Init-DMA2D-false-HAL-true,9-MX_ETH_Init-ETH-false-HAL-true,9-MX_FMC_Init-FMC-false-HAL-true,10-MX_I2C1_Init-I2C1-false-HAL-true,11-MX_I2C3_Init-I2C3-false-HAL-true,12-MX_LTDC_Init-LTDC-false-HAL-true,13-MX_QUADSPI_Init-QUADSPI-false-HAL-true,14-MX_RTC_Init-RTC-false-HAL-true,15-MX_SAI2_Init-SAI2-false-HAL-true,16-MX_SDMMC1_SD_Init-SDMMC1-false-HAL-true,17-MX_SPDIFRX_Init-SPDIFRX-false-HAL-true,18-MX_SPI2_Init-SPI2-false-HAL-true,19-MX_TIM1_Init-TIM1-false-HAL-true,20-MX_TIM2_Init-TIM2-false-HAL-true,21-MX_TIM3_Init-TIM3-false-HAL-true,22-MX_TIM5_Init-TIM5-false-HAL-true,23-MX_TIM8_Init-TIM8-false-HAL-true,24-MX_TIM12_Init-TIM12-false-HAL-true,25-MX_USART1_UART_Init-USART1-false-HAL-true,26-MX_USART6_UART_Init-USART6-false-HAL-true,27-MX_FATFS_Init-FATFS-false-HAL-false,28-MX_USB_HOST_Init-USB_HOST-false-HAL-false
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_ADC3_Init-ADC3-false-HAL-true,5-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true,6-MX_CRC_Init-CRC-false-HAL-true,7-MX_DCMI_Init-DCMI-false-HAL-true,8-MX_DMA2D_Init-DMA2D-false-HAL-true,9-MX_FMC_Init-FMC-false-HAL-true,10-MX_I2C1_Init-I2C1-false-HAL-true,11-MX_I2C3_Init-I2C3-false-HAL-true,12-MX_LTDC_Init-LTDC-false-HAL-true,13-MX_QUADSPI_Init-QUADSPI-false-HAL-true,14-MX_RTC_Init-RTC-false-HAL-true,15-MX_SAI2_Init-SAI2-false-HAL-true,16-MX_SDMMC1_SD_Init-SDMMC1-false-HAL-true,17-MX_SPDIFRX_Init-SPDIFRX-false-HAL-true,18-MX_SPI2_Init-SPI2-false-HAL-true,19-MX_TIM1_Init-TIM1-false-HAL-true,20-MX_TIM2_Init-TIM2-false-HAL-true,21-MX_TIM3_Init-TIM3-false-HAL-true,22-MX_TIM5_Init-TIM5-false-HAL-true,23-MX_TIM8_Init-TIM8-false-HAL-true,24-MX_TIM12_Init-TIM12-false-HAL-true,25-MX_USART1_UART_Init-USART1-false-HAL-true,26-MX_USART6_UART_Init-USART6-false-HAL-true,27-MX_FATFS_Init-FATFS-false-HAL-false,28-MX_USB_HOST_Init-USB_HOST-false-HAL-false,29-MX_LWIP_Init-LWIP-false-HAL-false
 RCC.AHBFreq_Value=200000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
 RCC.APB1Freq_Value=50000000
