--- a/stmConn.ioc
+++ b/stmConn.ioc
@@ -41,19 +41,6 @@ ETH.MediaInterface=ETH_MEDIA_INTERFACE_RMII
 ETH.PHY_Name=LAN8742A_PHY_ADDRESS
 ETH.PHY_RESET_DELAY=0x00000FFF
 ETH.PhyAddress=0
-FATFS.BSP.number=1
-FATFS0.BSP.STBoard=false
-FATFS0.BSP.api=Unknown
-FATFS0.BSP.component=
-FATFS0.BSP.condition=
-FATFS0.BSP.i2caddr=0
-FATFS0.BSP.i2creg=0
-FATFS0.BSP.instance=PC13
-FATFS0.BSP.ip=GPIO
-FATFS0.BSP.mode=Input
-FATFS0.BSP.name=Detect_SDIO
-FATFS0.BSP.semaphore=
-FATFS0.BSP.solution=PC13
 FMC.CASLatency1=FMC_SDRAM_CAS_LATENCY_3
 FMC.ExitSelfRefreshDelay1=7
 FMC.IPParameters=CASLatency1,SDClockPeriod1,SDClockPeriod2,ReadBurst1,ReadBurst2,LoadToActiveDelay1,ExitSelfRefreshDelay1,SelfRefreshTime1,RowCycleDelay1,RowCycleDelay2,WriteRecoveryTime1,RPDelay1,RPDelay2,RCDDelay1
@@ -132,7 +119,7 @@ Mcu.IP29=USART1
 Mcu.IP3=DCMI
 Mcu.IP30=USART6
 Mcu.IP31=USB_HOST
-Mcu.IP32=USB_OTG_FS
+Mcu.IP32=USB_OTG_HS
 Mcu.IP4=DMA
 Mcu.IP5=DMA2D
 Mcu.IP6=ETH
@@ -220,7 +207,7 @@ Mcu.Pin165=PB14
 Mcu.Pin166=PB15
 Mcu.Pin167=VP_CRC_VS_CRC
 Mcu.Pin168=VP_DMA2D_VS_DMA2D
-Mcu.Pin169=VP_FATFS_VS_SDIO
+Mcu.Pin169=VP_FATFS_VS_USB
 Mcu.Pin17=PG13
 Mcu.Pin170=VP_FREERTOS_VS_CMSIS_V2
 Mcu.Pin171=VP_LWIP_VS_Enabled
@@ -235,7 +222,7 @@ Mcu.Pin179=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin18=PB9
 Mcu.Pin180=VP_TIM5_VS_ClockSourceINT
 Mcu.Pin181=VP_TIM8_VS_ClockSourceINT
-Mcu.Pin182=VP_USB_HOST_VS_USB_HOST_CDC_FS
+Mcu.Pin182=VP_USB_HOST_VS_USB_HOST_MSC_HS
 Mcu.Pin19=PB7
 Mcu.Pin2=PE2
 Mcu.Pin20=PB6
@@ -342,7 +329,7 @@ NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.LTDC_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
 NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.OTG_FS_IRQn=true\:5\:0\:false\:false\:true\:true\:true\:true
+NVIC.OTG_HS_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
 NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false
@@ -370,12 +357,10 @@ PA10.Signal=USB_OTG_FS_ID
 PA11.GPIOParameters=GPIO_Label
 PA11.GPIO_Label=OTG_FS_N
 PA11.Locked=true
-PA11.Mode=Host_Only
 PA11.Signal=USB_OTG_FS_DM
 PA12.GPIOParameters=GPIO_Label
 PA12.GPIO_Label=OTG_FS_P
 PA12.Locked=true
-PA12.Mode=Host_Only
 PA12.Signal=USB_OTG_FS_DP
 PA13.GPIOParameters=GPIO_Label
 PA13.GPIO_Label=SWDIO
@@ -450,6 +435,7 @@ PB1.Signal=USB_OTG_HS_ULPI_D2
 PB10.GPIOParameters=GPIO_Label
 PB10.GPIO_Label=ULPI_D3 [USB3320C-EZK_D3]
 PB10.Locked=true
+PB10.Mode=Host_HS
 PB10.Signal=USB_OTG_HS_ULPI_D3
 PB11.GPIOParameters=GPIO_Label
 PB11.GPIO_Label=ULPI_D4 [USB3320C-EZK_D4]
@@ -1214,7 +1200,7 @@ RCC.I2C2Freq_Value=50000000
 RCC.I2C3Freq_Value=50000000
 RCC.I2C4Freq_Value=50000000
 RCC.I2SFreq_Value=50000000
-RCC.IPParameters=AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CECFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,I2SFreq_Value,LCDTFToutputFreq_Value,LPTIM1Freq_Value,LSI_VALUE,MCO2PinFreq_Value,PLL48CLockSelection,PLLCLKFreq_Value,PLLI2SN,PLLI2SPCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SRCLKFreq_Value,PLLI2SRoutputFreq_Value,PLLM,PLLN,PLLQ,PLLQCLKFreq_Value,PLLQoutputFreq_Value,PLLSAIN,PLLSAIP,PLLSAIPCLKFreq_Value,PLLSAIQCLKFreq_Value,PLLSAIR,PLLSAIRCLKFreq_Value,PLLSAIRDiv,PLLSAIoutputFreq_Value,RNGFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMCClockSelection,SDMMCFreq_Value,SPDIFRXFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,UART7Freq_Value,UART8Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USART6Freq_Value,USBFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIOutputFreq_Value
+RCC.IPParameters=AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CECFreq_Value,CortexFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,I2SFreq_Value,LCDTFToutputFreq_Value,LPTIM1Freq_Value,LSI_VALUE,MCO2PinFreq_Value,PLL48CLockSelection,PLLCLKFreq_Value,PLLI2SN,PLLI2SPCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SRCLKFreq_Value,PLLI2SRoutputFreq_Value,PLLM,PLLN,PLLQ,PLLQCLKFreq_Value,PLLQoutputFreq_Value,PLLSAIN,PLLSAIP,PLLSAIPCLKFreq_Value,PLLSAIQCLKFreq_Value,PLLSAIR,PLLSAIRCLKFreq_Value,PLLSAIRDiv,PLLSAIoutputFreq_Value,PLLSourceVirtual,RNGFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMCClockSelection,SDMMCFreq_Value,SPDIFRXFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,UART7Freq_Value,UART8Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USART6Freq_Value,USBFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIOutputFreq_Value
 RCC.LCDTFToutputFreq_Value=9600000
 RCC.LPTIM1Freq_Value=50000000
 RCC.LSI_VALUE=32000
@@ -1239,6 +1225,7 @@ RCC.PLLSAIR=5
 RCC.PLLSAIRCLKFreq_Value=76800000
 RCC.PLLSAIRDiv=RCC_PLLSAIDIVR_8
 RCC.PLLSAIoutputFreq_Value=48000000
+RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 RCC.RNGFreq_Value=48000000
 RCC.SAI1Freq_Value=192000000
 RCC.SAI2Freq_Value=192000000
@@ -1382,30 +1369,32 @@ USART6.BaudRate=921600
 USART6.IPParameters=VirtualMode-Asynchronous,BaudRate
 USART6.VirtualMode-Asynchronous=VM_ASYNC
 USB_HOST.BSP.number=1
-USB_HOST.IPParameters=USBH_HandleTypeDef-CDC_FS,VirtualModeFS
-USB_HOST.USBH_HandleTypeDef-CDC_FS=hUsbHostFS
-USB_HOST.VirtualModeFS=Cdc
+USB_HOST.IPParameters=USBH_HandleTypeDef-MSC_HS,VirtualModeHS,USBH_MAX_DATA_BUFFER-MSC_HS,USBH_PROCESS_STACK_SIZE-MSC_HS
+USB_HOST.USBH_HandleTypeDef-MSC_HS=hUsbHostHS
+USB_HOST.USBH_MAX_DATA_BUFFER-MSC_HS=512
+USB_HOST.USBH_PROCESS_STACK_SIZE-MSC_HS=128
+USB_HOST.VirtualModeHS=Msc
 USB_HOST0.BSP.STBoard=false
-USB_HOST0.BSP.api=UnknownBspDriver
+USB_HOST0.BSP.api=Unknown
 USB_HOST0.BSP.component=
 USB_HOST0.BSP.condition=
 USB_HOST0.BSP.i2caddr=0
-USB_HOST0.BSP.i2creg=0
+USB_HOST0.BSP.i2creg=
 USB_HOST0.BSP.instance=PD5
 USB_HOST0.BSP.ip=GPIO
 USB_HOST0.BSP.mode=Output
-USB_HOST0.BSP.name=Drive_VBUS_FS
+USB_HOST0.BSP.name=Drive_VBUS_HS
 USB_HOST0.BSP.semaphore=
 USB_HOST0.BSP.solution=PD5
-USB_OTG_FS.IPParameters=phy_itface,VirtualMode
-USB_OTG_FS.VirtualMode=Host_Only
-USB_OTG_FS.phy_itface=HCD_PHY_EMBEDDED
+USB_OTG_HS.IPParameters=VirtualMode-Host_HS,speed-Host_HS
+USB_OTG_HS.VirtualMode-Host_HS=Host_HS
+USB_OTG_HS.speed-Host_HS=HCD_SPEED_HIGH
 VP_CRC_VS_CRC.Mode=CRC_Activate
 VP_CRC_VS_CRC.Signal=CRC_VS_CRC
 VP_DMA2D_VS_DMA2D.Mode=DMA2D_Activate
 VP_DMA2D_VS_DMA2D.Signal=DMA2D_VS_DMA2D
-VP_FATFS_VS_SDIO.Mode=SDIO
-VP_FATFS_VS_SDIO.Signal=FATFS_VS_SDIO
+VP_FATFS_VS_USB.Mode=USB
+VP_FATFS_VS_USB.Signal=FATFS_VS_USB
 VP_FREERTOS_VS_CMSIS_V2.Mode=CMSIS_V2
 VP_FREERTOS_VS_CMSIS_V2.Signal=FREERTOS_VS_CMSIS_V2
 VP_LWIP_VS_Enabled.Mode=Enabled
@@ -1430,8 +1419,8 @@ VP_TIM5_VS_ClockSourceINT.Mode=Internal
 VP_TIM5_VS_ClockSourceINT.Signal=TIM5_VS_ClockSourceINT
 VP_TIM8_VS_ClockSourceINT.Mode=Internal
 VP_TIM8_VS_ClockSourceINT.Signal=TIM8_VS_ClockSourceINT
-VP_USB_HOST_VS_USB_HOST_CDC_FS.Mode=CDC_FS
-VP_USB_HOST_VS_USB_HOST_CDC_FS.Signal=USB_HOST_VS_USB_HOST_CDC_FS
+VP_USB_HOST_VS_USB_HOST_MSC_HS.Mode=MSC_HS
+VP_USB_HOST_VS_USB_HOST_MSC_HS.Signal=USB_HOST_VS_USB_HOST_MSC_HS
 board=STM32F746G-DISCO
 boardIOC=true
 isbadioc=false
