--- a/stmConn.ioc
+++ b/stmConn.ioc
@@ -88,6 +88,9 @@ LTDC.PixelFormat_L0=LTDC_PIXEL_FORMAT_RGB565
 LTDC.VSync=10
 LTDC.WindowX1_L0=480
 LTDC.WindowY1_L0=272
+LWIP.IPParameters=LWIP_SO_RCVTIMEO,LWIP_TCP_KEEPALIVE
+LWIP.LWIP_SO_RCVTIMEO=1
+LWIP.LWIP_TCP_KEEPALIVE=1
 LWIP.Version=v2.1.2_Cube
 Mcu.Family=STM32F7
 Mcu.IP0=ADC3
